<resources>
    <string name="app_name">Subspedia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="section_all_series">Lista Serie</string>
    <string name="section_translating_series">Traduzione</string>
    <string name="title_activity_serie_details">SerieDetailsActivity</string>


    <string name="season">Stagione %d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading_series">Caricamento serie…</string>
    <string name="loading_subtitles">Caricamento sottotitoli…</string>
    <string name="loading">Caricamento…</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="downloading_message">Download in corso…</string>
    <string name="download">Download</string>
    <string name="cancel">Annulla</string>
    <string name="error_download">Errore durante il download</string>
    <string name="download_complete">Download completato</string>
    <string name="title_section_last_sub">Ultimi</string>
    <string name="add_favorite">Preferita</string>
    <string name="favorite_serie">Preferite</string>

    <string name="empty_msg_favorite">Nessuna serie preferita.\nAggiungi una serie tra quelle disponibili.</string>
    <string name="empty_msg_series">Nessuna serie TV presente. Controlla la tua connessione ad internet.</string>

    <string name="empty" />
    <string name="notification_title_new_subtitles">Nuovi sottotitoli per le tue serie preferite.</string>
    <string name="notification_content_new_subtitle">%d nuovo sottotitolo.</string>
    <string name="notification_content_new_subtitles">%d nuovi sottotitoli.</string>

    <plurals name="notification_content_new_subs">
        <item quantity="one">@string/notification_content_new_subtitle</item>
        <item quantity="other">@string/notification_content_new_subtitles</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection">Sei offline. Riattiva la tua connessione ad internet per accedere ai contenuti di Subspedia.</string>

    <!-- Empty states strings -->
    <string name="empty_last_subtitles_title">Oh! Nessun nuovo sottotitolo</string>
    <string name="empty_last_subtitles_content">Attendi la traduzione di qualche sottotitolo e riprova.</string>

    <string name="empty_translating_title">Nessuno sta traducendo!?</string>
    <string name="empty_translating_content">Attualmente non ci sono episodi in traduzione, ricontrolla più tardi.</string>

    <string name="empty_list_series_title">Non ci sono serie TV!?</string>
    <string name="empty_list_series_content">Controlla la tua connessione o riprova più tardi.</string>

    <string name="empty_list_favorite_series_title">Impossibile! Non segui nessuna serie TV?</string>
    <string name="empty_list_favorite_series_content">Aggiungi una serie TV ai preferiti per riceve notifiche dei nuovi episodi.</string>

    <string name="empty_list_details_serie_title">Qualcosa non va…</string>
    <string name="empty_list_details_serie_content">Non ci sono episodi per questa serie TV? Controlla la tua connessione.</string>
    <string name="title_activity_settings">Impostazioni</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="category_notification">Notifiche</string>
    <string name="category_info">Info</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Termini e Condizioni</string>
    <string name="title_enable_notification">Notifiche serie preferite</string>
    <string name="summary_enable_notification">Ricevi le notifiche dell\'uscita di nuovi sottotitoli per le tue serie tv preferite.</string>
    <string name="key_settings_notification">switch_notification_settings</string>

    <string name="url_privacy_policy">http://andreapetreti.altervista.org/privacy-policy-subspedia.html</string>
    <string name="url_terms_cond">http://andreapetreti.altervista.org/terms-subspedia.html</string>
</resources>
