<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_notification">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_settings_notification"
            android:summary="@string/summary_enable_notification"
            android:title="@string/title_enable_notification" />
    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory android:title="@string/category_info">
        <Preference android:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW" android:data="@string/url_privacy_policy"/>
        </Preference>
        <Preference android:title="@string/terms_condition">
            <intent android:action="android.intent.action.VIEW" android:data="@string/url_terms_cond" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
